# pmac

./: .devcontainer.json  .gitignore  .gitremotes  .travis.yml  CMakeLists.txt  Makefile  Pipfile  README.md  RELEASE.md  ppmac_links  testThis.txt
ci/: build-synapps-deps.sh  configure.sh  coverage.sh  install-packages.sh
configure/: CONFIG_SITE.linux-x86_64.Common  PMC_RULES  RELEASE  RELEASE.linux-x86_64.Common  RELEASE.local  RELEASE.local.linux-x86_64  module.ini
docs/: Makefile  README.md  make.bat
docs/doxygen/: .gitignore  Doxyfile
docs/source/: code.py  code.rst  conf.py  design.rst  developer.rst  index.rst  introduction.rst  migration.rst  pmacAxis.rst  pmacCSAxis.rst  pmacCSController.rst  pmacCSGroups.rst  pmacCallbackInterface.rst  pmacCommandStore.rst  pmacController.rst  pmacMessageBroker.rst  pmacTrajectory.rst  user.rst
etc/: Makefile  builder.py  generate_raster_scan.py  generate_raster_scan_brick.py  jitter.pmc  lab-home.pmc  lab.pmc  labPPmacConfig.ppm  module.ini  pmacQVars.edl  ppmac_clipper_copy.sh  scan.sh  showQVars
etc/LabPowerPmac/: 172.23.247.1_pp_debug.txt  LabPowerPmac.PowerPmacSuite_sln  LabPowerPmac.ppproj  PPMAC_172.23.247.1_INIFile.ini
etc/PowerClipper/: PowerClipper.PowerPmacSuite_sln
etc/bootstrap/: BRICK_M_variables.pmc  PMAC_CLIPPER_M_variables.pmc  PMAC_CLIPPER_Startup.pmc  README.md  lab.pmc
etc/makeIocs/: Makefile  Makefile.iocs  example.xml  example_RELEASE  lab-ppmac.xml  lab.README  lab.pmc  lab.xml  lab_RELEASE  moveAxesToSafe.xml  moveAxesToSafeTrig.xml  powerPMAC.xml  stress_test.xml
etc/malcolm/: PMAC-ML-TEST-01.yaml
ibek/: Pipfile  pmac.ibek.defs.yaml
iocs/: Makefile  README.txt
iocs/example/: Makefile
iocs/simple-power-pmac/: Makefile
pmacApp/: Makefile
pmacApp/Db/: 1jack_compensated.template  1jack_compensated.vdb  2jack.template  2jack.vdb  3jack.template  3jack.vdb  3jack_mirror.template  3jack_mirror.vdb  B22_optics_box.template  B22_optics_box.vdb  IDT_sagittal_bender.template  IDT_sagittal_bender.vdb  IDT_sagittal_dcm.template  IDT_sagittal_dcm.vdb  Makefile  accel_dcm.template  accel_dcm.vdb  aperture_slits.template  aperture_slits.vdb  autohome.template  autohome.vdb  basic_asyn_motor.template  bender.template  bender.vdb  blade_slits.template  dls_pmac_asyn_motor.template  dls_pmac_cs_asyn_motor.template  eloss_kill_autohome_records.template  encoder_readback.template  flexure_slits.template  flexure_slits.vdb  gap_and_centre_slits.template  gap_and_centre_slits.vdb  geobrickette_motion_stop.template  motion_stop.template  motor_in_cs.template  multi_beamstop_on_platform.template  multi_beamstop_on_platform.vdb  pmacCSS.template  pmacController.template  (+37 more)
pmacApp/opi/: Makefile
pmacApp/pmacAsynIPPortSrc/: Makefile  RELEASE_NOTES  pmacAsynIPPort.c  pmacAsynIPPort.dbd  pmacAsynIPPort.h
pmacApp/pmacAsynVMEPortSrc/: Makefile  Release.txt  add_pmac.dbd  asynUploadFile.c  devPmacMbx.c  devPmacRam.c  devStatusSoft.c  drvPmac.c  drvPmac.h  pmacDriver.c  pmacDriver.h  pmacError.c  pmacError.h  pmacInclude.dbd  pmacSerial.c  pmacVme.c  pmacVme.h  statusDevice.dbd  statusRecord.c  statusRecord.dbd  tpmacLIBOBJS  tsubRecord.c  tsubRecord.dbd
pmacApp/pmacEthernetSrc/: Makefile  devPmacMbx.c  devPmacRam.c  drvPmacEth.c  drvPmacEth.h  pmac-eth.dbd  pmac-ethSupportInclude.dbd  pmacConsole.c  pmacError.c  pmacEthernet.c  pmacEthernet.h  pmacRam.c  pmacRam.h  statusRecord.c  vendcmds.h
pmacApp/pmc/: CS_1jack_compensated.pmc  CS_2jack.pmc  CS_3jack.pmc  CS_3jack_mirror.pmc  CS_B22_optics_box.pmc  CS_Coarse_Fine_1D.pmc  CS_Coarse_Fine_2D.pmc  CS_IDT_sagittal_bender.pmc  CS_IDT_sagittal_dcm.pmc  CS_LEED_positioner.pmc  CS_QCM.pmc  CS_XYZ_3D_rotate.pmc  CS_X_generic.pmc  CS_accel_dcm.pmc  CS_aperture_slits.pmc  CS_bender.pmc  CS_blade_slits.pmc  CS_dmm.pmc  CS_flexure_slits.pmc  CS_gap_and_centre_slits.pmc  CS_gonio.pmc  CS_multi_beamstop_on_platform.pmc  CS_pgm.pmc  CS_sample_centering.pmc  CS_sample_slit.pmc  LAB_setup.pmc  Makefile  PLC0_position_compare.pmc  PLC1_BRICK_initialise.pmc  PLC1_initialise.pmc  PLC2_motion_stop.pmc  PLC3_micromech_enable.pmc  PLC4_encoder_loss.pmc  PLC4_protection.pmc  PLC7_kill_when_idle.pmc  PLC7_power_down_when_idle.pmc  PLC_auto_cure.pmc  PLC_brake.pmc  PLC_cpu_load.pmc  PLC_heart_beat.pmc  (+29 more)
pmacApp/powerPmacAsynPortSrc/: Makefile  drvAsynPowerPMACPort.cpp  drvAsynPowerPMACPort.dbd  drvAsynPowerPMACPort.h  interactive.cpp  sshDriver.cpp  sshDriver.h
pmacApp/src/: CharIntHashtable.cpp  CharIntHashtable.h  Hashtable.cpp  Hashtable.h  IntegerHashtable.cpp  IntegerHashtable.h  Makefile  StringHashtable.cpp  StringHashtable.h  pmacAsynMotorPort.dbd  pmacAsynMotorPortVxWorks.dbd  pmacAxis.cpp  pmacAxis.h  pmacCSAxis.cpp  pmacCSAxis.h  pmacCSController.cpp  pmacCSController.h  pmacCSMonitor.cpp  pmacCSMonitor.h  pmacCallbackInterface.cpp  pmacCallbackInterface.h  pmacCallbackStore.cpp  pmacCallbackStore.h  pmacCommandStore.cpp  pmacCommandStore.h  pmacController.cpp  pmacController.h  pmacCsGroups.cpp  pmacCsGroups.h  pmacDebugger.cpp  pmacDebugger.h  pmacGroupsHashtable.cpp  pmacGroupsHashtable.h  pmacHardwareInterface.cpp  pmacHardwareInterface.h  pmacHardwarePower.cpp  pmacHardwarePower.h  pmacHardwareTurbo.cpp  pmacHardwareTurbo.h  pmacMessageBroker.cpp  (+3 more)
pmacApp/tsubSrc/: Makefile  README  tsubA.c  tsubAcc65e.c  tsubBD.c  tsubBD3.c  tsubCCD.c  tsubCCD2009.c  tsubCCD_bm_no_extern_offset.c  tsubCS.c  tsubCollimator.c  tsubDN.c  tsubHS.c  tsubInclude.dbd  tsubMD.c  tsubMI.c  tsubMO_2mtr_cry2down.c  tsubMO_3mtr_cry2down.c  tsubMO_3mtr_cry2up.c  tsubRecord.c  tsubRecord.dbd  tsubSH.c  tsubSeq.c  tsubTB.c  tsubX.c  tsubXY.c  tsubXYZ.c  tsubXYZ_frac.c  tsubX_bm_extern_offset.c
pmacApp/unitTests/: Makefile  MockPMACAsynDriver.cpp  MockPMACAsynDriver.h  pmac-test.cpp  pmac-valgrind.cpp  pmacTestUtilities.cpp  (+10 more)
sim/: README.md  SimPMAC.py
test/: Pipfile  README.md  README.txt  requires.txt
test_malcolm/: plot_trajectories.py  test_trajectories.py
(+272 files in other folders)
